ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: sg-external
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck/ready
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: sns.jerryljh.me
  name: feed-server
  namespace: sns
spec:
  ingressClassName: alb
  rules:
  - host: sns.jerryljh.me
    http:
      paths:
      - backend:
          service:
            name: feed-server
            port:
              number: 80
        path: /api/feeds
        pathType: Prefix
